browser/scss/a-projects.scss
/*Projects Page
========================*/

$header-height: 65px;
$footer-height: 40px;

/*Colors
========================*/
$aqua: #7FFFD4;
$cyan: #E0FFFF;
$cream: #F5FFFA;
$pastelBlue: #33CCFF;
$pastelOrange: lightsalmon;
$pastelPurple: #C688E8;
$pastelRed: #FF807D;
$pastelPink: #FF8EB2;

/*page styles
=========================*/

projects-mobile {
	display: none;
}

#projects {
	overflow: hidden;
	position: relative;
	height: calc(100vh - 40px);
	// height: calc(100% - $footer-height);
	background-image: url('bgnoise.jpg');
}

$skewDeg: 18deg;
$magicVH: 32.4vh; // this number is magic and depends on skew angle
$scrollTime: 1s;


.skw-page {
// position: absolute;
// left: 0;
// top: 0;
	width: 100%;

	#p1-content {
		#p1-heading {
			margin-top: 40%;
			align-self: center;
			// margin-left: 100px;
			font-size: 60px;
		}
		#scroll-icons {
			margin-top: 10px;
			display: flex;
			flex-wrap: wrap;
			justify-content: center;
			p {
				font-size: 22px;
				font-weight: bold;
				margin: 10px 15px;
			}
			#arrows {
				height: 40px;
			}
			#mouse {
				stroke: dimgray;
				height: 50px;
				margin-bottom: 20px;
				margin-top: -5px;
			}
		}
	}

	#coming-soon {
		margin-top: 300px;
		text-align: center;
		padding-left: 70px;
		font-size: 40px;
	}

	&__half {
		position: absolute;
		top: 0;
		// width: 50%;
		height: 100vh;
		transition: transform $scrollTime;

		&--left {
			width: 49%;
			left: 0;
			transform: translate3d(-$magicVH, 100%, 0);

			.skw-page__content {
				text-align: left;
			}
		}

		&--right {
			width: 51%;
			left: 49%;
			transform: translate3d($magicVH, -100%, 0);

			.skw-page__content {
				text-align: right;
			}
		}

		.skw-page.active & {
			transform: translate3d(0,0,0);
		}
	}

	&__skewed {
		overflow: hidden;
		position: absolute;
		top: 0;
		width: 140%;
		height: 100%;
		transform: skewX($skewDeg * -1);

		.skw-page__half--left & {
			left: -40%;
		}
		.skw-page__half--right & {
			right: -40%;
		}
	}

	&__content {
		display: flex;
		// align-items: center;
		// justify-content: center;
		flex-flow: column wrap;
		position: absolute;
		left: 0;
		top: 0;
		width: 100%;
		height: 100%;
		transform: skewX($skewDeg);
		transition: transform $scrollTime, opacity $scrollTime;

		background-size: cover;

		.skw-page__half--left & {
			padding-left: 20%;
			padding-right: 20%;
			transform-origin: 100% 0;
		}

		.skw-page__half--right & {
			padding-left: 30%;
			padding-right: 22%;
			transform-origin: 0 100%;
		}

		.skw-page.inactive & {
			opacity: 0.5;
			transform: skewX($skewDeg) scale(0.95);
		}
	}

	&__heading {
		margin-top: 8vw;
		// margin-top: 120px;
		margin-bottom: 15px;
		font-size: 30px;
		a{
			font-weight: bold;
		}
	}

	&__description {
		font-size: 18px;
		padding: 0px;
		// text-align: center;
		li {
			font-weight: bold;
			display: inline-block;
			list-style-type: none;
			border: solid dimgray 2px;
			border-radius: 5px;
			padding: 5px;
			margin-bottom: 5px;
		}
	}

	&__link {
		// color: #FFA0A0;
	}

	&-1 {
		.skw-page__half--left .skw-page__content {
			background-image: url('steve-working.jpg');
		}
		.skw-page__half--right .skw-page__content {
			background-image: url(bgnoise.jpg);
		}
	}

	&-2 {
		.skw-page__half--left .skw-page__content {
			background-image: url(bgnoise.jpg);
		}
		.skw-page__half--right .skw-page__content {
			background-image: url('cohearence.png');
		}
	}

	&-3 {
		.skw-page__half--left .skw-page__content {
			background-image: url('spheres.png');
		}
		.skw-page__half--right .skw-page__content {
			background-image: url(bgnoise.jpg);
		}
	}

	&-4 {
		.skw-page__half--left .skw-page__content {
			background-image: url(bgnoise.jpg);
		}
		.skw-page__half--right .skw-page__content {
			background-image: url('gimme.png');
		}
	}

	&-5 {
		.skw-page__half--left .skw-page__content {
			background-image: url('collage.png');
		}
		.skw-page__half--right .skw-page__content {
			background-image: url(bgnoise.jpg);
		}
	}

}

// @media (min-width: 1069px){
// 	body{
// 		overflow-y: hidden;
// 	}
// }

@media (max-width: 1068px) {
	.skw-page__content {
		.skw-page__half--left & {
			padding-left: 12%;
			padding-right: 25%;
		}

		.skw-page__half--right & {
			padding-left: 35%;
			padding-right: 15%;
		}
	}
	.skw-page {
		#coming-soon {
			margin-top: 240px;
			padding-left: 20px;
		}
		#p1-content #p1-heading {
			margin-top: 60%;
		}
	}
}

@media (max-width: 768px) {
	body {
		overflow-y: scroll;
		-webkit-overflow-scrolling: touch;
	}
	.skw-pages {
		// overflow: visible;
		// height: 87vh;
	}
	.skw-page {
		display: none;
	}

	#projects {
		overflow-y: scroll;
		-webkit-overflow-scrolling: touch;
	}
	projects-mobile {
		// overflow-y: scroll;
		margin: 5% 0% 5% 0%;
		// height: 100%;
		display: block;

		h2, h3, a, li {
			font-weight: bold;
		}

		h2, li, ul {
			padding: 20px 30px 20px 30px;
		}

		img {
			width: 100%;
		}

		h1 {
			// padding: 10px 30px 10px 30px;
			text-align: center;
			font-size: 40px;
			margin-top: 0px;
			margin-bottom: 0px;
		}

		h2 {
			font-size: 30px;
			margin-bottom: 0px;
			margin-top: 0px;
		}

		h3 {
			padding: 0px 30px 0px 30px;
			font-size: 22px;
			margin-bottom: 0px;
			margin-top: 0px;
		}

		p {
			font-size: 20px;
			padding: 10px 30px 10px 30px;
			text-align: left;
		}

		li {
			font-size: 16px;
			display: inline-block;
			list-style-type: none;
			border: solid dimgray 2px;
			border-radius: 10px;
			padding: 10px;
			margin-bottom: 10px;
		}

		hr {
			margin: 40px 50px 40px 50px;
			border-width: 3px;
		}

		#p1 {
			background-color: $pastelOrange;
		}
		#p2 {
			background-color: $pastelBlue;
		}
		#p3 {
			background-color: $pastelRed;
		}

		#bottom-divider {
			margin: 40px 50px 20px 50px;
			border-width: 3px;
		}
	}
}


/*Possible new features
====================================*/

	// #progress-bar{
	// 	position: absolute;
	// 	z-index: 999;
	// 	width: 11px;
	// 	height: 40vh;
	// 	left: 50%;
	// 	top: 25.5%;
	// 	background-color: $cream;
	// 	border: solid $aqua 2px;
	// 	border-radius: 10px;
	// 	transform: skewX(-$skewDeg);
		//
		// .progress-point {
		// 	position: absolute;
		// 	width: 25px;
		// 	height: 25px;
		// 	background: linear-gradient($cream 25%, dimgray 150%);
		// 	border: solid $aqua 1px;
		// 	border-radius: 50px;
		// 	transform: skewX($skewDeg);
		// 	transition: transform $scrollTime;
		// 	// transform: translate3d($magicVH, -100%, 0);
		// }
		// #p1{
		// 	left: -120%;
		// 	top: 5%;
		// }
		// #p2{
		// 	left: -120%;
		// 	top: 25%;
		// }
		// #p3{
		// 	left: -120%;
		// 	top: 45%;
		// }
		// #p4{
		// 	left: -120%;
		// 	top: 65%;
		// }
		// #p5{
		// 	left: -120%;
		// 	top: 85%;
		// }
		// .current {
		// 	background: linear-gradient($aqua 25%, dimgray 150%);
		// 	border: solid $cream 1px;
		// }
	// }


// @-webkit-keyframes fadeout {
// 	0% {transform: opacity(1);}
// 	50% {transform: opacity(.9);}
// 	100% {transform: opacity(0);}
// }

